--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -42,131 +42,131 @@
 				</symbol>
 			</defs>
 		</svg>
-		<div class="p-loading js-loading" id="scroll-to-div-id-anchor">
-			<div class="p-loading_wrap js-loadingWrap">
+		<div class="p-loading js-loading">
+			<div class="p-loading__wrap js-loadingWrap">
 				<div class="p-loadingInner">
-					<div class="p-loadingInner_item mod-item1 js-scaleItem"></div>
-					<div class="p-loadingInner_item mod-item2 js-scaleItem"></div>
-					<div class="p-loadingInner_item mod-item3 js-scaleItem"></div>
-					<div class="p-loadingInner_item mod-item4 js-scaleItem"></div>
+					<div class="p-loadingInner__item p-loadingInner__item--item1 js-scaleItem"></div>
+					<div class="p-loadingInner__item p-loadingInner__item--item2 js-scaleItem"></div>
+					<div class="p-loadingInner__item p-loadingInner__item--item3 js-scaleItem"></div>
+					<div class="p-loadingInner__item p-loadingInner__item--item4 js-scaleItem"></div>
 				</div>
 			</div>
-			<p class="p-loading_text"></p>
+			<p class="p-loading__text"></p>
 		</div>
 		<header class="p-header js-header">
 			<div class="p-headerTicker"></div>
 		</header>
-		<button class="p-menuBtn js-menuBtn mod-displayNone_smallDesktop">
-			<div class="p-menuBtn_open">
+		<button class="p-menuBtn js-menuBtn u-blockS-h">
+			<div class="p-menuBtn__open">
 				<span></span>
 				<span></span>
 				<span></span>
 			</div>
-			<div class="p-menuBtn_close js-btn">
+			<div class="p-menuBtn__close js-btn">
 			</div>
 		</button>
 		<div class="p-menu js-menu">
-			<div class="p-menu_wrap">
-				<nav class="p-menu_nav">
+			<div class="p-menu__wrap">
+				<nav class="p-menu__nav">
 					<ul>
-						<li class="buttonSquare mod-animeV mod-vText js-menuNav">
-							<a class="buttonSquare_inner" href="">
-								<span class="buttonSquare_label">トップ</span>
-								<svg class="buttonSquare_leftArrow"><use xlink:href="#arrow"></svg>
+						<li class="c-squareButton--animeV c-squareButton--vText p-menuNavItem js-menuNav">
+							<a class="c-squareButton__inner" href="">
+								<span class="c-squareButton__label">トップ</span>
+								<svg class="c-squareButton__leftArrow p-menuNavItem__leftArrow"><use xlink:href="#arrow"></svg>
 							</a>
 						</li>
-						<li class="buttonSquare mod-animeV mod-vText js-menuNav">
-							<a class="buttonSquare_inner" href="">
-								<span class="buttonSquare_label">あらすじ</span>
-								<svg class="buttonSquare_leftArrow"><use xlink:href="#arrow"></svg>
+						<li class="c-squareButton--animeV c-squareButton--vText p-menuNavItem js-menuNav">
+							<a class="c-squareButton__inner" href="">
+								<span class="c-squareButton__label">あらすじ</span>
+								<svg class="c-squareButton__leftArrow p-menuNavItem__leftArrow"><use xlink:href="#arrow"></svg>
 							</a>
 						</li>
-						<li class="buttonSquare mod-animeV mod-vText js-menuNav">
-							<a class="buttonSquare_inner" href="">
-								<span class="buttonSquare_label">ストーリー</span>
-								<svg class="buttonSquare_leftArrow"><use xlink:href="#arrow"></svg>
+						<li class="c-squareButton--animeV c-squareButton--vText p-menuNavItem js-menuNav">
+							<a class="c-squareButton__inner" href="">
+								<span class="c-squareButton__label">ストーリー</span>
+								<svg class="c-squareButton__leftArrow p-menuNavItem__leftArrow"><use xlink:href="#arrow"></svg>
 							</a>
 						</li>
-						<li class="buttonSquare mod-animeV mod-vote mod-vText js-menuNav">
-							<a class="buttonSquare_inner" href="">
-								<span class="buttonSquare_label">投票結果</span>
-								<svg class="buttonSquare_leftArrow"><use xlink:href="#arrow"></svg>
+						<li class="c-squareButton--animeV c-squareButton--vText p-menuNavItem p-menuNavItem--vote js-menuNav">
+							<a class="c-squareButton__inner" href="">
+								<span class="c-squareButton__label p-menuNavItem__label">投票結果</span>
+								<svg class="c-squareButton__leftArrow p-menuNavItem__leftArrow"><use xlink:href="#arrow"></svg>
 							</a>
 						</li>
 					</ul>
 				</nav>
-				<div class="p-menu_sns">
-					<button class="buttonSquare mod-animeH"><svg class="buttonSquare_squareIcon"><use xlink:href="#iconTwitter"></svg></button>
-					<button class="buttonSquare mod-animeH"><svg class="buttonSquare_squareIcon"><use xlink:href="#iconFacebook"></svg></button>
-					<button class="buttonSquare mod-animeH"><svg class="buttonSquare_squareIcon"><use xlink:href="#iconLine"></svg></button>
+				<div class="p-menu__sns">
+					<button class="c-squareButton--animeH p-snsButton"><svg class="c-squareButton__squareIcon"><use xlink:href="#iconTwitter"></svg></button>
+					<button class="c-squareButton--animeH p-snsButton"><svg class="c-squareButton__squareIcon"><use xlink:href="#iconFacebook"></svg></button>
+					<button class="c-squareButton--animeH p-snsButton"><svg class="c-squareButton__squareIcon"><use xlink:href="#iconLine"></svg></button>
 				</div>
 			</div>
 		</div>
 		<main>
 			<section class="p-kv js-kv js-fadeIn is-onScreenItem">
-				<ul class="p-kv_characters js-charaList is-step1">
-					<li class="p-character mod-item3 mod-displayNone_smallDesktop">
-						<div class="p-character_inner"></div>
+				<ul class="p-kv__characters js-charaList is-step1">
+					<li class="p-character p-character--item3 u-blockS-h">
+						<div class="p-character__inner"></div>
 					</li>
-					<li class="p-character mod-item4 mod-displayNone_smallDesktop">
-						<div class="p-character_inner"></div>
+					<li class="p-character p-character--item4 u-blockS-h">
+						<div class="p-character__inner"></div>
 					</li>
-					<li class="p-character mod-item1">
-						<div class="p-character_inner"></div>
+					<li class="p-character p-character--item1">
+						<div class="p-character__inner"></div>
 					</li>
-					<li class="p-character mod-item2">
-						<div class="p-character_inner"></div>
+					<li class="p-character p-character--item2">
+						<div class="p-character__inner"></div>
 					</li>
-					<li class="p-character mod-item3">
-						<div class="p-character_inner"></div>
+					<li class="p-character p-character--item3">
+						<div class="p-character__inner"></div>
 					</li>
-					<li class="p-character mod-item4">
-						<div class="p-character_inner"></div>
+					<li class="p-character p-character--item4">
+						<div class="p-character__inner"></div>
 					</li>
-					<li class="p-character mod-item1 mod-displayNone_smallDesktop">
-						<div class="p-character_inner"></div>
+					<li class="p-character p-character--item1 u-blockS-h">
+						<div class="p-character__inner"></div>
 					</li>
-					<li class="p-character mod-item2 mod-displayNone_smallDesktop">
-						<div class="p-character_inner"></div>
+					<li class="p-character p-character--item2 u-blockS-h">
+						<div class="p-character__inner"></div>
 					</li>
 				</ul>
 				<h1>
-					<span class="p-kv_title mod-title1"><img src="/data/hidari-kikino-eren/images/kv_title1.png" loading="eager" alt="新聞広告の日"></span>
-					<span class="p-kv_title mod-title2"><img src="/data/hidari-kikino-eren/images/kv_title2.png" loading="eager" alt="THE NEWS FOR THE TEAM"></span>
+					<span class="p-kv__title p-kv__title--title1"><img src="/data/hidari-kikino-eren/images/kv_title1.png" loading="eager" alt="新聞広告の日"></span>
+					<span class="p-kv__title p-kv__title--title2"><img src="/data/hidari-kikino-eren/images/kv_title2.png" loading="eager" alt="THE NEWS FOR THE TEAM"></span>
 				</h1>
-				<div class="p-kv_name">
+				<div class="p-kv__name">
 					<img src="/data/hidari-kikino-eren/images/kv_names.png" loading="eager" alt="朝日新聞社 ✕ 左利きのエレン Powered by JINS">
 				</div>
 			</section>
 			<section class="p-summery">
-				<div class="p-summery_heading js-fadeIn">
-					<div class="p-summery_headingInner">
-						<h2 class="p-summery_title"><img src="/data/hidari-kikino-eren/images/summary_title.png" loading="eager" alt="あらすじ"></h2>
-						<div class="p-summery_headingDesc">
-							<p class="p-summery_descLine">目黒広告社の朝倉CDのもとに、</p>
-							<p class="p-summery_descLine">日本を代表するアイウエアカンパニーJINSから、</p>
-							<p class="p-summery_descLine">新聞広告をテーマにした競合プレゼンのオファーが。</p>
-							<p class="p-summery_descLine">しかし、ライバルは、ニュースになる広告を仕掛け続ける</p>
-							<p class="p-summery_descLine">The Breakthrough Company GO</p>
-							<p class="p-summery_descLine">代表の三浦は相手にもならないとうそぶく、、、</p>
-							<p class="p-summery_descLine">商品であるバイオレットプラスは画期的ゆえに</p>
-							<p class="p-summery_descLine">広告では表現できないことも多い。</p>
-							<p class="p-summery_descLine mod-displayNone_smallDesktop">混迷を極める状況のなか、</p>
-							<p class="p-summery_descLine mod-displayNone_smallDesktop">二つのチームが出した企画とはー。</p>
-							<p class="p-summery_descLine mod-displayNone_mobile">混迷を極める状況のなか、二つのチームが出した企画とはー。</p>
+				<div class="p-summery__heading js-fadeIn">
+					<div class="p-summery__headingInner">
+						<h2 class="p-summery__title"><img src="/data/hidari-kikino-eren/images/summary_title.png" loading="eager" alt="あらすじ"></h2>
+						<div class="p-summery__headingDesc">
+							<p class="p-summery__descLine">目黒広告社の朝倉CDのもとに、</p>
+							<p class="p-summery__descLine">日本を代表するアイウエアカンパニーJINSから、</p>
+							<p class="p-summery__descLine">新聞広告をテーマにした競合プレゼンのオファーが。</p>
+							<p class="p-summery__descLine">しかし、ライバルは、ニュースになる広告を仕掛け続ける</p>
+							<p class="p-summery__descLine">The Breakthrough Company GO</p>
+							<p class="p-summery__descLine">代表の三浦は相手にもならないとうそぶく、、、</p>
+							<p class="p-summery__descLine">商品であるバイオレットプラスは画期的ゆえに</p>
+							<p class="p-summery__descLine">広告では表現できないことも多い。</p>
+							<p class="p-summery__descLine u-blockS-h">混迷を極める状況のなか、</p>
+							<p class="p-summery__descLine u-blockS-h">二つのチームが出した企画とはー。</p>
+							<p class="p-summery__descLine u-blockM-h">混迷を極める状況のなか、二つのチームが出した企画とはー。</p>
 						</div>
 					</div>
 				</div>
-				<div class="p-summery_relation js-relation">
-					<a class="p-summery_relationInner">
+				<div class="p-summery__relation js-relation">
+					<a class="p-summery__relationInner">
 						<figure>
 							<picture>
 								<source srcset="/data/hidari-kikino-eren/images/summary_relation_l.jpg" media="(min-width: 800px)">
 								<img src="/data/hidari-kikino-eren/images/summary_relation.jpg" loading="eager" alt="">
 							</picture>
 						</figure>
-						<div class="buttonSquare mod-animeH">
-							<div class="buttonSquare_inner">
+						<div class="c-squareButton--animeH p-squareButton">
+							<div class="c-squareButton__inner">
 								<img src="/data/hidari-kikino-eren/images/summary_icon_zoom.png" loading="eager" alt="人物相関図">
 							</div>
 						</div>
@@ -174,27 +174,23 @@
 				</div>
 			</section>
 			<section class="p-story is-prologue">
-				<div class="p-story_inner">
-					<div class="p-story_tabs">
-						<button class="p-story_tab tab js-tab is-active">
-							<div class="tab_inner">
-								<svg>
-									<use xlink:href="#arrow">
-								</svg>
-								<span class="p-story_label brn_inner">プロローグ<br><span>「新聞広告の日<br class="mod-displayNone_smallDesktop">THE NEWS FOR NEW TEAM」</span></span>
+				<div class="p-story__inner">
+					<div class="p-story__tabs">
+						<button class="p-story__tab tab js-tab is-active">
+							<div class="p-tab__inner">
+								<svg class="p-tab__inner__arrow"><use xlink:href="#arrow"></svg>
+								<span class="p-tab__inner__label">プロローグ<br><span>「新聞広告の日<br class="u-blockS-h">THE NEWS FOR NEW TEAM」</span></span>
 							</div>
 						</button>
-						<button class="p-story_tab tab js-tab">
-							<div class="tab_inner">
-								<svg>
-									<use xlink:href="#arrow">
-								</svg>
-								<span class="p-story_label">本編<br><span>「新聞広告の日<br class="mod-displayNone_smallDesktop">THE NEWS FOR NEW TEAM」</span></span>
+						<button class="p-story__tab tab js-tab">
+							<div class="p-tab__inner">
+								<svg class="p-tab__inner__arrow"><use xlink:href="#arrow"></svg>
+								<span class="p-tab__inner__label">本編<br><span>「新聞広告の日<br class="u-blockS-h">THE NEWS FOR NEW TEAM」</span></span>
 							</div>
 						</button>
 					</div>
-					<div class="p-story_wrap"> 
-						<ol class="p-story_pages mod-prologue js-pages is-active">
+					<div class="p-story__wrap"> 
+						<ol class="p-story__pages p-story__pages--prologue js-pages is-active">
 							<li><img src="/data/hidari-kikino-eren/images/prologue/01.png" loading="eager" alt="プロローグ ページ 01"></li>
 							<li><img src="/data/hidari-kikino-eren/images/prologue/02.png" loading="eager" alt="プロローグ ページ 02"></li>
 							<li><img src="/data/hidari-kikino-eren/images/prologue/03.png" loading="eager" alt="プロローグ ページ 03"></li>
@@ -219,7 +215,7 @@
 							<li><img src="/data/hidari-kikino-eren/images/prologue/22.png" loading="eager" alt="プロローグ ページ 22"></li>
 							<li><img src="/data/hidari-kikino-eren/images/prologue/23.png" loading="eager" alt="プロローグ ページ 23"></li>
 						</ol>
-						<ol class="p-story_pages mod-main js-pages">
+						<ol class="p-story__pages p-story__pages--main js-pages">
 							<li><img src="/data/hidari-kikino-eren/images/main/01.png" loading="eager" alt="本編 ページ 01"></li>
 							<li><img src="/data/hidari-kikino-eren/images/main/02.png" loading="eager" alt="本編 ページ 02"></li>
 							<li><img src="/data/hidari-kikino-eren/images/main/03.png" loading="eager" alt="本編 ページ 03"></li>
@@ -240,57 +236,53 @@
 							<li><img src="/data/hidari-kikino-eren/images/main/18.png" loading="eager" alt="本編 ページ 18"></li>
 						</ol>
 					</div>
-					<div class="p-story_tabs mod-bottomTab">
-						<button class="p-story_tab js-tab is-active">
-							<div class="tab_inner">
-								<svg>
-									<use xlink:href="#arrow">
-								</svg>
-								<span class="p-story_label brn_inner">プロローグ<br><span>「新聞広告の日<br class="mod-displayNone_smallDesktop">THE NEWS FOR NEW TEAM」</span></span>
+					<div class="p-story__tabs p-story__tabs--bottom">
+						<button class="p-story__tab p-story__tab--bottom js-tab is-active">
+							<div class="p-tab__inner">
+								<svg class="p-tab__inner__arrow"><use xlink:href="#arrow"></svg>
+								<span class="p-tab__inner__label">プロローグ<br><span>「新聞広告の日<br class="u-blockS-h">THE NEWS FOR NEW TEAM」</span></span>
 							</div>
 						</button>
-						<button class="p-story_tab js-tab">
-							<div class="tab_inner">
-								<svg>
-									<use xlink:href="#arrow">
-								</svg>
-								<span class="p-story_label">本編<br><span>「新聞広告の日<br class="mod-displayNone_smallDesktop">THE NEWS FOR NEW TEAM」</span></span>
+						<button class="p-story__tab p-story__tab--bottom js-tab">
+							<div class="p-tab__inner">
+								<svg class="p-tab__inner__arrow"><use xlink:href="#arrow"></svg>
+								<span class="p-tab__inner__label">本編<br><span>「新聞広告の日<br class="u-blockS-h">THE NEWS FOR NEW TEAM」</span></span>
 							</div>
 						</button>
 					</div>
 				</div>
 			</section>
 			<section class="p-result">
-				<div class="p-result_bgWrap">
-					<div class="bgItem mod-top"></div>
-					<div class="bgItem mod-bottom"></div>
+				<div class="p-result__bgWrap">
+					<div class="bgItem bgItem--top"></div>
+					<div class="bgItem bgItem--bottom"></div>
 				</div>
-				<div class="p-result_inner js-fadeIn">
+				<div class="p-result__inner js-fadeIn">
 					<h2 class="p-resultTitle">
-						<span class="p-resultTitle_inner mod-displayNone_smallDesktop"><img src="/data/hidari-kikino-eren/images/result_title1.png" loading="eager" alt="朝日新聞掲載・"></span>
-						<span class="p-resultTitle_inner mod-displayNone_smallDesktop"><img src="/data/hidari-kikino-eren/images/result_title2.png" loading="eager" alt="JINS広告が決定！"></span>
-						<span class="p-resultTitle_inner mod-displayNone_mobile"><img src="/data/hidari-kikino-eren/images/result_title_l.png" loading="eager" alt="朝日新聞掲載・JINS広告が決定！"></span>
+						<span class="p-resultTitle__inner u-blockS-h"><img src="/data/hidari-kikino-eren/images/result_title1.png" loading="eager" alt="朝日新聞掲載・"></span>
+						<span class="p-resultTitle__inner u-blockS-h"><img src="/data/hidari-kikino-eren/images/result_title2.png" loading="eager" alt="JINS広告が決定！"></span>
+						<span class="p-resultTitle__inner u-blockM-h"><img src="/data/hidari-kikino-eren/images/result_title_l.png" loading="eager" alt="朝日新聞掲載・JINS広告が決定！"></span>
 					</h2>
 					<div class="p-resultDesc">
-						<p class="p-resultDesc_line mod-displayNone_smallDesktop">10/20〜10/28の投票期間で</p>
-						<p class="p-resultDesc_line mod-displayNone_smallDesktop">およそ2342人の参加ありがとうございました!</p>
-						<p class="p-resultDesc_line mod-displayNone_smallDesktop">みなさんの投票の結果、採用されたのは</p>
-						<p class="p-resultDesc_line mod-displayNone_smallDesktop">「目黒広告社」の広告でした!</p>
-						<p class="p-resultDesc_line mod-displayNone_smallDesktop">実際の掲載を楽しみにしていてください。</p>
-						<p class="p-resultDesc_line mod-displayNone_mobile">10/20〜10/28の投票期間でおよそ2342人の参加ありがとうございました!</p>
-						<p class="p-resultDesc_line mod-displayNone_mobile">みなさんの投票の結果、採用されたのは「目黒広告社」の広告でした!</p>
-						<p class="p-resultDesc_line mod-displayNone_mobile">実際の掲載を楽しみにしていてください。</p>
+						<p class="p-resultDesc__line u-blockS-h">10/20〜10/28の投票期間で</p>
+						<p class="p-resultDesc__line u-blockS-h">およそ2342人の参加ありがとうございました!</p>
+						<p class="p-resultDesc__line u-blockS-h">みなさんの投票の結果、採用されたのは</p>
+						<p class="p-resultDesc__line u-blockS-h">「目黒広告社」の広告でした!</p>
+						<p class="p-resultDesc__line u-blockS-h">実際の掲載を楽しみにしていてください。</p>
+						<p class="p-resultDesc__line u-blockM-h">10/20〜10/28の投票期間でおよそ2342人の参加ありがとうございました!</p>
+						<p class="p-resultDesc__line u-blockM-h">みなさんの投票の結果、採用されたのは「目黒広告社」の広告でした!</p>
+						<p class="p-resultDesc__line u-blockM-h">実際の掲載を楽しみにしていてください。</p>
 					</div>
 					<div class="p-resultLogo"><img src="/data/hidari-kikino-eren/images/result_logo_meguro.png" loading="eager" alt="目黒広告社"></div>
 					<div class="p-resultImg1"><img src="/data/hidari-kikino-eren/images/result_img1.png" loading="eager" alt=""></div>
 					<div class="p-resultImg2"><img src="/data/hidari-kikino-eren/images/result_img2.png" loading="eager" alt=""></div>
 					<div class="p-resultDate">
-						<p class="p-resultDate_label">
+						<p class="p-resultDate__label">
 							<picture>
 								<source srcset="/data/hidari-kikino-eren/images/result_info_label_l.png" media="(min-width: 800px)">
 								<img src="/data/hidari-kikino-eren/images/result_info_label.png" loading="eager" alt="広告掲載日"></p>
 							</picture>
-						<p class="p-resultDate_day">
+						<p class="p-resultDate__day">
 							<picture>
 								<source srcset="/data/hidari-kikino-eren/images/result_date_l.png" media="(min-width: 800px)">
 								<img src="/data/hidari-kikino-eren/images/result_date.png" loading="eager" alt="2019 11/21">
@@ -302,12 +294,12 @@
 		</main>
 	</div>
 	<div class="p-modal js-modal" data-modal="modalClose">
-		<button class="buttonSquare mod-animeH">
-			<span class="modalCloseIcon js-modalCloseIcon" data-modal="modalClose"></span>
+		<button class="c-squareButton--animeH p-squareButton">
+			<span class="p-modalCloseIcon js-modalCloseIcon" data-modal="modalClose"></span>
 		</button>
 		<div class="p-modalContents">
-			<p class="p-modalContents_title">
-				<span class="p-modalContents_titleInner"><img src="/data/hidari-kikino-eren/images/modal_title.png" loading="eager" alt="登場人物"></span>
+			<p class="p-modalContents__title">
+				<span class="p-modalContents__titleInner"><img src="/data/hidari-kikino-eren/images/modal_title.png" loading="eager" alt="登場人物"></span>
 			</p>
 			<div class="p-modalContentsInner">
 				<img src="/data/hidari-kikino-eren/images/summary_chart_zoom.jpg" loading="eager" alt="">
