sticky tab modal 完了

--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -173,7 +173,7 @@
 					</a>
 				</div>
 			</section>
-			<section class="p-story is-prologue">
+			<section class="p-story is-prologue js-story">
 				<div class="p-story__inner">
 					<div class="p-story__tabs">
 						<button class="p-story__tab tab js-tab is-active">
