--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -138,7 +138,7 @@
 					<img src="/data/hidari-kikino-eren/images/kv_names.png" loading="eager" alt="朝日新聞社 ✕ 左利きのエレン Powered by JINS">
 				</div>
 			</section>
-			<section class="p-summery">
+			<section class="p-summery js-summury">
 				<div class="p-summery__heading js-fadeIn">
 					<div class="p-summery__headingInner">
 						<h2 class="p-summery__title"><img src="/data/hidari-kikino-eren/images/summary_title.png" loading="eager" alt="あらすじ"></h2>
