--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -10,17 +10,17 @@
 	<meta name="keywords" content="朝日新聞,朝日デジタル,朝日,新聞広告の日,新聞の日,エレン,左ききのエレン,かっぴー,GO,三浦,JINS,バイオレットプラス,ジンズ,バイオレットライト,目黒広告社,結果発表,結果">
 	<meta property="og:title" content="朝日新聞社×左ききのエレンプロジェクト｜公式">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="http://localhost:3000.images/ogp-min.jpg"> <!--サーバーup時変更 -->
+	<meta property="og:image" content="https://mrpoco.github.io/myport/dev/web/data/hidari-kikino-eren/images/ogp-min.jpg"> <!--サーバーup時変更 -->
 	<meta property="og:site_name" content="朝日新聞デジタル">
 	<meta property="og:description" content="新聞広告の日 朝日新聞社×左ききのエレン Powerd by JINS」の公式サイト。リツイート投票により、実際に朝日新聞に掲載される広告が決定しました。なお、cakes・朝日新聞で実際に掲載された漫画も掲載しています。#新聞広告の日 #左ききのエレン">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@asahi">
 	<meta name="twitter:title" content="朝日新聞社×左ききのエレンプロジェクト｜公式">
 	<meta name="twitter:description" content="「新聞広告の日 朝日新聞社×左ききのエレン Powerd by JINS」の公式サイト。リツイート投票により、実際に朝日新聞に掲載される広告が決定しました。なお、cakes・朝日新聞で実際に掲載された漫画も掲載しています。#新聞広告の日 #左ききのエレン">
-	<meta name="twitter:image" content="http://localhost:3000.images/ogp-min.jpg">
-	<meta name = "msapplication-TileImage" content = "http://localhost:3000./images/logo_icon.png">  <!-- windowsピン止めイメージ -->
+	<meta name="twitter:image" content="https://mrpoco.github.io/myport/dev/web/data/hidari-kikino-eren/images/ogp-min.jpg">
+	<meta name = "msapplication-TileImage" content = "https://mrpoco.github.io/myport/dev/web/data/hidari-kikino-eren/images/logo_icon.png">  <!-- windowsピン止めイメージ -->
 	<meta name="msapplication-TileColor" content="#B90000"> <!-- windowsピン止め背景色 -->
-	<link rel="icon" href=".images/favicon.ico"> <!-- favicon -->
+	<link rel="icon" href="./favicon.ico"> <!-- favicon -->
 	<link rel="stylesheet" href="/../../asset/css/hidari-kikino-eren/index.css"> 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/yakuhanjp@3.3.1/dist/css/yakuhanjp.min.css">
 </head>
@@ -131,17 +131,17 @@
 					</li>
 				</ul>
 				<h1>
-					<span class="p-kv__title p-kv__title--title1"><img src=".images/kv_title1.png" loading="eager" alt="新聞広告の日"></span>
-					<span class="p-kv__title p-kv__title--title2"><img src=".images/kv_title2.png" loading="eager" alt="THE NEWS FOR THE TEAM"></span>
+					<span class="p-kv__title p-kv__title--title1"><img src="./kv_title1.png" loading="eager" alt="新聞広告の日"></span>
+					<span class="p-kv__title p-kv__title--title2"><img src="./kv_title2.png" loading="eager" alt="THE NEWS FOR THE TEAM"></span>
 				</h1>
 				<div class="p-kv__name">
-					<img src=".images/kv_names.png" loading="eager" alt="朝日新聞社 ✕ 左利きのエレン Powered by JINS">
+					<img src="./kv_names.png" loading="eager" alt="朝日新聞社 ✕ 左利きのエレン Powered by JINS">
 				</div>
 			</section>
 			<section class="p-summery js-summury">
 				<div class="p-summery__heading js-fadeIn">
 					<div class="p-summery__headingInner">
-						<h2 class="p-summery__title"><img src=".images/summary_title.png" loading="eager" alt="あらすじ"></h2>
+						<h2 class="p-summery__title"><img src="./summary_title.png" loading="eager" alt="あらすじ"></h2>
 						<div class="p-summery__headingDesc">
 							<p class="p-summery__descLine">目黒広告社の朝倉CDのもとに、</p>
 							<p class="p-summery__descLine">日本を代表するアイウエアカンパニーJINSから、</p>
@@ -161,13 +161,13 @@
 					<a class="p-summery__relationInner">
 						<figure>
 							<picture>
-								<source srcset=".images/summary_relation_l.jpg" media="(min-width: 800px)">
-								<img src=".images/summary_relation.jpg" loading="eager" alt="">
+								<source srcset="./summary_relation_l.jpg" media="(min-width: 800px)">
+								<img src="./summary_relation.jpg" loading="eager" alt="">
 							</picture>
 						</figure>
 						<div class="c-squareButton--animeH p-squareButton">
 							<div class="c-squareButton__inner">
-								<img src=".images/summary_icon_zoom.png" loading="eager" alt="人物相関図">
+								<img src="./summary_icon_zoom.png" loading="eager" alt="人物相関図">
 							</div>
 						</div>
 					</a>
@@ -191,49 +191,49 @@
 					</div>
 					<div class="p-story__wrap"> 
 						<ol class="p-story__pages p-story__pages--prologue js-pages is-active">
-							<li><img src=".images/prologue/01.png" loading="eager" alt="プロローグ ページ 01"></li>
-							<li><img src=".images/prologue/02.png" loading="eager" alt="プロローグ ページ 02"></li>
-							<li><img src=".images/prologue/03.png" loading="eager" alt="プロローグ ページ 03"></li>
-							<li><img src=".images/prologue/04.png" loading="eager" alt="プロローグ ページ 04"></li>
-							<li><img src=".images/prologue/05.png" loading="eager" alt="プロローグ ページ 05"></li>
-							<li><img src=".images/prologue/06.png" loading="eager" alt="プロローグ ページ 06"></li>
-							<li><img src=".images/prologue/07.png" loading="eager" alt="プロローグ ページ 07"></li>
-							<li><img src=".images/prologue/08.png" loading="eager" alt="プロローグ ページ 08"></li>
-							<li><img src=".images/prologue/09.png" loading="eager" alt="プロローグ ページ 09"></li>
-							<li><img src=".images/prologue/10.png" loading="eager" alt="プロローグ ページ 10"></li>
-							<li><img src=".images/prologue/11.png" loading="eager" alt="プロローグ ページ 11"></li>
-							<li><img src=".images/prologue/12.png" loading="eager" alt="プロローグ ページ 12"></li>
-							<li><img src=".images/prologue/13.png" loading="eager" alt="プロローグ ページ 13"></li>
-							<li><img src=".images/prologue/14.png" loading="eager" alt="プロローグ ページ 14"></li>
-							<li><img src=".images/prologue/15.png" loading="eager" alt="プロローグ ページ 15"></li>
-							<li><img src=".images/prologue/16.png" loading="eager" alt="プロローグ ページ 16"></li>
-							<li><img src=".images/prologue/17.png" loading="eager" alt="プロローグ ページ 17"></li>
-							<li><img src=".images/prologue/18.png" loading="eager" alt="プロローグ ページ 18"></li>
-							<li><img src=".images/prologue/19.png" loading="eager" alt="プロローグ ページ 19"></li>
-							<li><img src=".images/prologue/20.png" loading="eager" alt="プロローグ ページ 20"></li>
-							<li><img src=".images/prologue/21.png" loading="eager" alt="プロローグ ページ 21"></li>
-							<li><img src=".images/prologue/22.png" loading="eager" alt="プロローグ ページ 22"></li>
-							<li><img src=".images/prologue/23.png" loading="eager" alt="プロローグ ページ 23"></li>
+							<li><img src="./prologue/01.png" loading="eager" alt="プロローグ ページ 01"></li>
+							<li><img src="./prologue/02.png" loading="eager" alt="プロローグ ページ 02"></li>
+							<li><img src="./prologue/03.png" loading="eager" alt="プロローグ ページ 03"></li>
+							<li><img src="./prologue/04.png" loading="eager" alt="プロローグ ページ 04"></li>
+							<li><img src="./prologue/05.png" loading="eager" alt="プロローグ ページ 05"></li>
+							<li><img src="./prologue/06.png" loading="eager" alt="プロローグ ページ 06"></li>
+							<li><img src="./prologue/07.png" loading="eager" alt="プロローグ ページ 07"></li>
+							<li><img src="./prologue/08.png" loading="eager" alt="プロローグ ページ 08"></li>
+							<li><img src="./prologue/09.png" loading="eager" alt="プロローグ ページ 09"></li>
+							<li><img src="./prologue/10.png" loading="eager" alt="プロローグ ページ 10"></li>
+							<li><img src="./prologue/11.png" loading="eager" alt="プロローグ ページ 11"></li>
+							<li><img src="./prologue/12.png" loading="eager" alt="プロローグ ページ 12"></li>
+							<li><img src="./prologue/13.png" loading="eager" alt="プロローグ ページ 13"></li>
+							<li><img src="./prologue/14.png" loading="eager" alt="プロローグ ページ 14"></li>
+							<li><img src="./prologue/15.png" loading="eager" alt="プロローグ ページ 15"></li>
+							<li><img src="./prologue/16.png" loading="eager" alt="プロローグ ページ 16"></li>
+							<li><img src="./prologue/17.png" loading="eager" alt="プロローグ ページ 17"></li>
+							<li><img src="./prologue/18.png" loading="eager" alt="プロローグ ページ 18"></li>
+							<li><img src="./prologue/19.png" loading="eager" alt="プロローグ ページ 19"></li>
+							<li><img src="./prologue/20.png" loading="eager" alt="プロローグ ページ 20"></li>
+							<li><img src="./prologue/21.png" loading="eager" alt="プロローグ ページ 21"></li>
+							<li><img src="./prologue/22.png" loading="eager" alt="プロローグ ページ 22"></li>
+							<li><img src="./prologue/23.png" loading="eager" alt="プロローグ ページ 23"></li>
 						</ol>
 						<ol class="p-story__pages p-story__pages--main js-pages">
-							<li><img src=".images/main/01.png" loading="eager" alt="本編 ページ 01"></li>
-							<li><img src=".images/main/02.png" loading="eager" alt="本編 ページ 02"></li>
-							<li><img src=".images/main/03.png" loading="eager" alt="本編 ページ 03"></li>
-							<li><img src=".images/main/04.png" loading="eager" alt="本編 ページ 04"></li>
-							<li><img src=".images/main/05.png" loading="eager" alt="本編 ページ 05"></li>
-							<li><img src=".images/main/06.png" loading="eager" alt="本編 ページ 06"></li>
-							<li><img src=".images/main/07.png" loading="eager" alt="本編 ページ 07"></li>
-							<li><img src=".images/main/08.png" loading="eager" alt="本編 ページ 08"></li>
-							<li><img src=".images/main/09.png" loading="eager" alt="本編 ページ 09"></li>
-							<li><img src=".images/main/10.png" loading="eager" alt="本編 ページ 10"></li>
-							<li><img src=".images/main/11.png" loading="eager" alt="本編 ページ 11"></li>
-							<li><img src=".images/main/12.png" loading="eager" alt="本編 ページ 12"></li>
-							<li><img src=".images/main/13.png" loading="eager" alt="本編 ページ 13"></li>
-							<li><img src=".images/main/14.png" loading="eager" alt="本編 ページ 14"></li>
-							<li><img src=".images/main/15.png" loading="eager" alt="本編 ページ 15"></li>
-							<li><img src=".images/main/16.png" loading="eager" alt="本編 ページ 16"></li>
-							<li><img src=".images/main/17.png" loading="eager" alt="本編 ページ 17"></li>
-							<li><img src=".images/main/18.png" loading="eager" alt="本編 ページ 18"></li>
+							<li><img src="./main/01.png" loading="eager" alt="本編 ページ 01"></li>
+							<li><img src="./main/02.png" loading="eager" alt="本編 ページ 02"></li>
+							<li><img src="./main/03.png" loading="eager" alt="本編 ページ 03"></li>
+							<li><img src="./main/04.png" loading="eager" alt="本編 ページ 04"></li>
+							<li><img src="./main/05.png" loading="eager" alt="本編 ページ 05"></li>
+							<li><img src="./main/06.png" loading="eager" alt="本編 ページ 06"></li>
+							<li><img src="./main/07.png" loading="eager" alt="本編 ページ 07"></li>
+							<li><img src="./main/08.png" loading="eager" alt="本編 ページ 08"></li>
+							<li><img src="./main/09.png" loading="eager" alt="本編 ページ 09"></li>
+							<li><img src="./main/10.png" loading="eager" alt="本編 ページ 10"></li>
+							<li><img src="./main/11.png" loading="eager" alt="本編 ページ 11"></li>
+							<li><img src="./main/12.png" loading="eager" alt="本編 ページ 12"></li>
+							<li><img src="./main/13.png" loading="eager" alt="本編 ページ 13"></li>
+							<li><img src="./main/14.png" loading="eager" alt="本編 ページ 14"></li>
+							<li><img src="./main/15.png" loading="eager" alt="本編 ページ 15"></li>
+							<li><img src="./main/16.png" loading="eager" alt="本編 ページ 16"></li>
+							<li><img src="./main/17.png" loading="eager" alt="本編 ページ 17"></li>
+							<li><img src="./main/18.png" loading="eager" alt="本編 ページ 18"></li>
 						</ol>
 					</div>
 					<div class="p-story__tabs p-story__tabs--bottom">
@@ -259,9 +259,9 @@
 				</div>
 				<div class="p-result__inner js-fadeIn">
 					<h2 class="p-resultTitle">
-						<span class="p-resultTitle__inner u-blockS-h"><img src=".images/result_title1.png" loading="eager" alt="朝日新聞掲載・"></span>
-						<span class="p-resultTitle__inner u-blockS-h"><img src=".images/result_title2.png" loading="eager" alt="JINS広告が決定！"></span>
-						<span class="p-resultTitle__inner u-blockM-h"><img src=".images/result_title_l.png" loading="eager" alt="朝日新聞掲載・JINS広告が決定！"></span>
+						<span class="p-resultTitle__inner u-blockS-h"><img src="./result_title1.png" loading="eager" alt="朝日新聞掲載・"></span>
+						<span class="p-resultTitle__inner u-blockS-h"><img src="./result_title2.png" loading="eager" alt="JINS広告が決定！"></span>
+						<span class="p-resultTitle__inner u-blockM-h"><img src="./result_title_l.png" loading="eager" alt="朝日新聞掲載・JINS広告が決定！"></span>
 					</h2>
 					<div class="p-resultDesc">
 						<p class="p-resultDesc__line u-blockS-h">10/20〜10/28の投票期間で</p>
@@ -273,19 +273,19 @@
 						<p class="p-resultDesc__line u-blockM-h">みなさんの投票の結果、採用されたのは「目黒広告社」の広告でした!</p>
 						<p class="p-resultDesc__line u-blockM-h">実際の掲載を楽しみにしていてください。</p>
 					</div>
-					<div class="p-resultLogo"><img src=".images/result_logo_meguro.png" loading="eager" alt="目黒広告社"></div>
-					<div class="p-resultImg1"><img src=".images/result_img1.png" loading="eager" alt=""></div>
-					<div class="p-resultImg2"><img src=".images/result_img2.png" loading="eager" alt=""></div>
+					<div class="p-resultLogo"><img src="./result_logo_meguro.png" loading="eager" alt="目黒広告社"></div>
+					<div class="p-resultImg1"><img src="./result_img1.png" loading="eager" alt=""></div>
+					<div class="p-resultImg2"><img src="./result_img2.png" loading="eager" alt=""></div>
 					<div class="p-resultDate">
 						<p class="p-resultDate__label">
 							<picture>
-								<source srcset=".images/result_info_label_l.png" media="(min-width: 800px)">
-								<img src=".images/result_info_label.png" loading="eager" alt="広告掲載日"></p>
+								<source srcset="./result_info_label_l.png" media="(min-width: 800px)">
+								<img src="./result_info_label.png" loading="eager" alt="広告掲載日"></p>
 							</picture>
 						<p class="p-resultDate__day">
 							<picture>
-								<source srcset=".images/result_date_l.png" media="(min-width: 800px)">
-								<img src=".images/result_date.png" loading="eager" alt="2019 11/21">
+								<source srcset="./result_date_l.png" media="(min-width: 800px)">
+								<img src="./result_date.png" loading="eager" alt="2019 11/21">
 							</picture>
 						</p>
 					</div>
@@ -299,10 +299,10 @@
 		</button>
 		<div class="p-modalContents">
 			<p class="p-modalContents__title">
-				<span class="p-modalContents__titleInner"><img src=".images/modal_title.png" loading="eager" alt="登場人物"></span>
+				<span class="p-modalContents__titleInner"><img src="./modal_title.png" loading="eager" alt="登場人物"></span>
 			</p>
 			<div class="p-modalContentsInner">
-				<img src=".images/summary_chart_zoom.jpg" loading="eager" alt="">
+				<img src="./summary_chart_zoom.jpg" loading="eager" alt="">
 			</div>
 		</div>
 	</div>
