--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -21,7 +21,7 @@
 	<meta name = "msapplication-TileImage" content = "https://mrpoco.github.io/myport/dev/web/data/hidari-kikino-eren/images/logo_icon.png">  <!-- windowsピン止めイメージ -->
 	<meta name="msapplication-TileColor" content="#B90000"> <!-- windowsピン止め背景色 -->
 	<link rel="icon" href="./images/favicon.ico"> <!-- favicon -->
-	<link rel="stylesheet" href="/../../asset/css/hidari-kikino-eren/index.css"> 
+	<link rel="stylesheet" href="../../asset/css/hidari-kikino-eren/index.css"> 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/yakuhanjp@3.3.1/dist/css/yakuhanjp.min.css">
 </head>
 <body>
