--- a/dev/web/data/index.html
+++ b/dev/web/data/index.html
@@ -18,6 +18,8 @@
       <div>vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv</div>
       <div> afagag</div>
     </div>
+    <a href="./hidari-kikino-eren/">エレン</a>
+    <a href="./kadel/">KADEL</a>
   </div>
 </body>
 <script type="text/javascript" src="../../lib/jquery-3.4.1.min.js"></script>
