--- a/dev/web/data/kadel/index.html
+++ b/dev/web/data/kadel/index.html
@@ -7,20 +7,20 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta property="og:title" content="大阪府市コンセプトハウス 瓦の家｜株式会社KADeL">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="http://qpj01.sakura.ne.jp/kawaguchi/kadel/">
-  <meta property="og:image" content="http://qpj01.sakura.ne.jp/kawaguchi/kadel/images/ogp.jpg">
+  <meta property="og:url" content="https://mrpoco.github.io/myport/dev/web/data/kadel/">
+  <meta property="og:image" content="https://mrpoco.github.io/myport/dev/web/data/kadel/images/ogp.jpg">
   <meta property="og:site_name" content="大阪府市コンセプトハウス 瓦の家｜株式会社KADeL">
   <meta property="og:description" content="大阪府市の建築事務所KADeLの新しいコンセプトハウス「瓦の家」をご紹介します。">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@twitter_account">
-  <link rel="stylesheet" href="/../../asset/css/kadel/index.css">
+  <link rel="stylesheet" href="../../asset/css/kadel/index.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- header -->
   <header class="header">
     <h1 class="header-logo js-header-logo">
-      <a href="https://fukoku-h.co.jp/">
+      <a href="">
         <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 133.76 133.76">
           <title>株式会社KADeL</title>
           <rect width="133.76" height="133.76" style="fill:#221f20"></rect>
