--- a/dev/web/data/index.html
+++ b/dev/web/data/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="../../asset/css/test/index.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>My Portfolio</title>
+	<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans+JP:400,700" rel="stylesheet">
+	<link rel="stylesheet" href="../asset/css/top/index.css">
 </head>
 <body>
-  <div class="a">
-    <div class="flex">
-      <div class="f1">おおおおおおおお</div>
-      <div class="f2">ええええええええ</div>
-      <div>っっっっっc</div>
-      <div>っっっっっっc</div>
-      <div>rockrock!!!!!!!!!!!</div>
-      <div>vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv</div>
-      <div> afagag</div>
-    </div>
-    <a href="./hidari-kikino-eren/">エレン</a>
-    <a href="./kadel/">KADEL</a>
-  </div>
+	<main class="top">
+		<section class="p-kv">
+			<img src="/data/images/p-kv-min.jpg" alt="">
+			<h1>My Portfolio</h1>
+		</section>
+	</main>
 </body>
-<script type="text/javascript" src="../../lib/jquery-3.4.1.min.js"></script>
-<script type="text/javascript" src="../../src/js/test/test.js"></script>
+<script type="text/javascript" src="../src/js/top/index.js"></script>
 </html>
