--- a/dev/web/data/index.html
+++ b/dev/web/data/index.html
@@ -62,6 +62,28 @@
 		</section>
 		<section class="p-works">
 			<h2>Works</h2>
+			<ul class="p-works__list">
+				<li>
+					<a href=""><img src="/data/images/p-work_list_eren-min.jpg" alt=""></a>
+					<div class="p-works__text">
+						<h3>制作物：朝日新聞社のLP写経</h3>
+						<dl>
+							<dt>所用時間：</dt>
+							<dd>約180時間</dd>
+							<dt>使用言語：</dt>
+							<dd>HTML, CSS(Sass), JavaScript</dd>
+							<dt>環境・ツール：</dt>
+							<dd>git, gulp, browserSync, autoprefixer</dd>
+						</dl>
+					</div>
+				</li>
+				<li>
+					<a href="">
+						<img src="/data/images/p-work_list_kadel-min.jpg" alt="">
+						<div class="p-works__text"></div>
+					</a>
+				</li>
+			</ul>
 			
 		</section>
 	</main>
