--- a/dev/web/data/index.html
+++ b/dev/web/data/index.html
@@ -10,43 +10,17 @@
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-	<svg display="none">
-		<defs>
-			<symbol id="icon-about" viewBox="0 0 32 32">
-				<path d="M18 22.082v-1.649c2.203-1.241 4-4.337 4-7.432 0-4.971 0-9-6-9s-6 4.029-6 9c0 3.096 1.797 6.191 4 7.432v1.649c-6.784 0.555-12 3.888-12 7.918h28c0-4.030-5.216-7.364-12-7.918z"></path>
-			</symbol>
-			<symbol id="icon-laptop" viewBox="0 0 32 32">
-				<path d="M28 22v-16c0-1.1-0.9-2-2-2h-20c-1.1 0-2 0.9-2 2v16h-4v6h32v-6h-4zM20 26h-8v-2h8v2zM26 22h-20v-15.996c0.001-0.001 0.002-0.003 0.004-0.004h19.993c0.001 0.001 0.003 0.002 0.004 0.004v15.996z"></path>
-			</symbol>
-			<symbol id="icon-skill" viewBox="0 0 32 32">
-				<path d="M29.181 19.070c-1.679-2.908-0.669-6.634 2.255-8.328l-3.145-5.447c-0.898 0.527-1.943 0.829-3.058 0.829-3.361 0-6.085-2.742-6.085-6.125h-6.289c0.008 1.044-0.252 2.103-0.811 3.070-1.679 2.908-5.411 3.897-8.339 2.211l-3.144 5.447c0.905 0.515 1.689 1.268 2.246 2.234 1.676 2.903 0.672 6.623-2.241 8.319l3.145 5.447c0.895-0.522 1.935-0.82 3.044-0.82 3.35 0 6.067 2.725 6.084 6.092h6.289c-0.003-1.034 0.259-2.080 0.811-3.038 1.676-2.903 5.399-3.894 8.325-2.219l3.145-5.447c-0.899-0.515-1.678-1.266-2.232-2.226zM16 22.479c-3.578 0-6.479-2.901-6.479-6.479s2.901-6.479 6.479-6.479c3.578 0 6.479 2.901 6.479 6.479s-2.901 6.479-6.479 6.479z"></path>
-			</symbol>
-		</defs>
-	</svg>
-	<header class="p-header" id="header">
-		<div class="p-header__wrap">
-			<h1>MY PORTFOLIO</h1>
-			<nav class="p-header__nav">
-				<ul class="p-header__list">
-					<li class="p-header__icon">
-						<svg><use xlink:href="#icon-about"></svg>
-						<span>profile</span>
-					</li>
-					<li class="p-header__icon">
-						<svg><use xlink:href="#icon-laptop"></svg>
-						<span>works</span>
-					</li>
-					<li class="p-header__icon">
-						<svg><use xlink:href="#icon-skill"></svg>
-						<span>skill</span>
-					</li>
-				</ul>
-			</nav>
-		</div>
-	</header>
 	<main class="p-topMain" id="main">
+		<header>
+			<h1>MY PORTFOLIO</h1>
+		</header>
+		<ul class="p-anchorList">
+			<li>profile</li>
+			<li>works</li>
+			<li>skill</li>
+		</ul>
 		<section class="p-profile">
-			<h2>Profile</h2>
+			<h2 class="p-sectionTitle">Profile</h2>
 			<div class="p-profile__content">
 				<dl>
 					<dt>氏名</dt>
@@ -61,30 +35,21 @@
 			</div>
 		</section>
 		<section class="p-works">
-			<h2>Works</h2>
+			<h2 class="p-sectionTitle">Works</h2>
 			<ul class="p-works__list">
 				<li>
-					<a href=""><img src="/data/images/p-work_list_eren-min.jpg" alt=""></a>
-					<div class="p-works__text">
-						<h3>制作物：朝日新聞社のLP写経</h3>
-						<dl>
-							<dt>所用時間：</dt>
-							<dd>約180時間</dd>
-							<dt>使用言語：</dt>
-							<dd>HTML, CSS(Sass), JavaScript</dd>
-							<dt>環境・ツール：</dt>
-							<dd>git, gulp, browserSync, autoprefixer</dd>
-						</dl>
-					</div>
+					<a href=""><img src="/data/images/eren.jpg" alt=""></a>
+					<p class="p-works__text">LP写経 / HTML / CSS(Sass) / JavaScript</p>
 				</li>
 				<li>
-					<a href="">
-						<img src="/data/images/p-work_list_kadel-min.jpg" alt="">
-						<div class="p-works__text"></div>
-					</a>
+					<a href=""><img src="/data/images/kadel.jpg" alt=""></a>
+					<p class="p-works__text">LP写経 / HTML / CSS(Sass) / jQuery</p>
 				</li>
 			</ul>
-			
+		</section>
+		<section class="p-skills">
+			<h2 class="p-sectionTitle">Skills</h2>
+			<p class="skills__text"> HTML / CSS(Sass)・設計 / jQuery / JavaScript / PHP / git / レスポンシブ化</p>
 		</section>
 	</main>
 </body>
