--- a/dev/web/data/index.html
+++ b/dev/web/data/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>My Portfolio</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans+JP:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="../asset/css/top/index.css">
-	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
 </head>
 <body>
-	<main class="p-topMain" id="main">
-		<header>
-			<h1>MY PORTFOLIO</h1>
-		</header>
+	<header class="p-header">
+		<h1>MY PORTFOLIO</h1>
 		<ul class="p-anchorList">
-			<li>profile</li>
-			<li>works</li>
-			<li>skill</li>
+			<li><a class="p-anchorList__text" href="#profile">profile</a></li>
+			<li><a class="p-anchorList__text" href="#works">works</a></li>
+			<li><a class="p-anchorList__text" href="#skills">skills</a></li>
 		</ul>
-		<section class="p-profile">
+	</header>
+	<main class="p-topMain" id="main">
+		<section class="p-profile" id="profile">
 			<h2 class="p-sectionTitle">Profile</h2>
 			<div class="p-profile__content">
 				<dl>
@@ -28,13 +28,11 @@
 					<dt>所属</dt>
 					<dd>株式会社 アウトソーシングデザイナー</dd>
 					<dt>自己紹介</dt>
-					<dd>立命館大学国際関係学部卒業後、スズキ株式会社にて国内営業職として2年半従事。その後27歳でWeb制作を始め、現勤務先に就職。約4ヶ月間のPHPの研修を経て大手ECサイトの運用・
-						保守に携わる。<br>使用言語： HTML, CSS(Sass), JavaScript
-					</dd>
+					<dd>立命館大学国際関係学部卒業後、スズキ株式会社にて国内営業職として2年半従事。その後27歳でWeb制作を始め、現勤務先に就職。約4ヶ月間のPHPの研修を経て大手ECサイトの運用・保守に携わる。<br>使用言語： HTML, CSS(Sass), JavaScript</dd>
 				</dl>
 			</div>
 		</section>
-		<section class="p-works">
+		<section class="p-works" id="works">
 			<h2 class="p-sectionTitle">Works</h2>
 			<ul class="p-works__list">
 				<li>
@@ -47,11 +45,17 @@
 				</li>
 			</ul>
 		</section>
-		<section class="p-skills">
+		<section class="p-skills" id="skills">
 			<h2 class="p-sectionTitle">Skills</h2>
 			<p class="skills__text"> HTML / CSS(Sass)・設計 / jQuery / JavaScript / PHP / git / レスポンシブ化</p>
 		</section>
 	</main>
+	<footer class="p-footer">
+		<div class="p-footer__content">
+			<p>MY PORTFOLIO</p>
+			<small>Copyright &copy; 2020 Takuma Kawaguchi. All Rights Reserved.</small>
+		</div>
+	</footer>
 </body>
 <script type="text/javascript" src="../src/js/top/index.js"></script>
 </html>
