見た目完了

--- a/dev/web/data/index.html
+++ b/dev/web/data/index.html
@@ -19,35 +19,33 @@
 		</ul>
 	</header>
 	<main class="p-topMain" id="main">
-		<section class="p-profile" id="profile">
+		<section class="p-section" id="profile">
 			<h2 class="p-sectionTitle">Profile</h2>
-			<div class="p-profile__content">
-				<dl>
-					<dt>氏名</dt>
-					<dd>川口拓真</dd>
-					<dt>所属</dt>
-					<dd>株式会社 アウトソーシングデザイナー</dd>
-					<dt>自己紹介</dt>
-					<dd>立命館大学国際関係学部卒業後、スズキ株式会社にて国内営業職として2年半従事。その後27歳でWeb制作を始め、現勤務先に就職。約4ヶ月間のPHPの研修を経て大手ECサイトの運用・保守に携わる。<br>使用言語： HTML, CSS(Sass), JavaScript</dd>
-				</dl>
-			</div>
+			<dl class="p-section__profileList">
+				<dt>氏名</dt>
+				<dd>川口拓真</dd>
+				<dt>所属</dt>
+				<dd>株式会社 アウトソーシングデザイナー</dd>
+				<dt>自己紹介</dt>
+				<dd>立命館大学国際関係学部卒業後、スズキ株式会社にて国内営業職として2年半従事。その後27歳でWeb制作を始め、現勤務先に就職。約4ヶ月間のPHPの研修を経て大手ECサイトの運用・保守に携わる。<br>使用言語： HTML, CSS(Sass), JavaScript</dd>
+			</dl>
 		</section>
-		<section class="p-works" id="works">
+		<section class="p-section" id="works">
 			<h2 class="p-sectionTitle">Works</h2>
-			<ul class="p-works__list">
+			<ul class="p-section__worksList">
 				<li>
 					<a href=""><img src="/data/images/eren.jpg" alt=""></a>
-					<p class="p-works__text">LP写経 / HTML / CSS(Sass) / JavaScript</p>
+					<p class="p-section__worksText">LP写経 / HTML / CSS(Sass) / JavaScript</p>
 				</li>
 				<li>
 					<a href=""><img src="/data/images/kadel.jpg" alt=""></a>
-					<p class="p-works__text">LP写経 / HTML / CSS(Sass) / jQuery</p>
+					<p class="p-section__worksText">LP写経 / HTML / CSS(Sass) / jQuery</p>
 				</li>
 			</ul>
 		</section>
-		<section class="p-skills" id="skills">
+		<section class="p-section" id="skills">
 			<h2 class="p-sectionTitle">Skills</h2>
-			<p class="skills__text"> HTML / CSS(Sass)・設計 / jQuery / JavaScript / PHP / git / レスポンシブ化</p>
+			<p class="p-section__skillsText"> HTML / CSS(Sass)・設計 / jQuery / JavaScript / PHP / git / レスポンシブ化</p>
 		</section>
 	</main>
 	<footer class="p-footer">
