--- a/dev/web/data/index.html
+++ b/dev/web/data/index.html
@@ -27,7 +27,7 @@
 				<dt>所属</dt>
 				<dd>株式会社 アウトソーシングデザイナー</dd>
 				<dt>自己紹介</dt>
-				<dd>立命館大学国際関係学部卒業後、スズキ株式会社にて国内営業職として2年半従事。その後27歳でWeb制作を始め、現勤務先に就職。約4ヶ月間のPHPの研修を経て大手ECサイトの運用・保守に携わる。<br>使用言語： HTML, CSS(Sass), JavaScript</dd>
+				<dd>立命館大学国際関係学部卒業後、スズキ株式会社にて国内営業職として2年半従事。その後27歳でWeb制作を始め、現勤務先に就職。約4ヶ月間のPHPの研修を経て大手ECサイトの運用・保守に1年携わる。<br>使用言語： HTML, CSS(Sass), JavaScript</dd>
 			</dl>
 		</section>
 		<section class="p-section" id="works">
