--- a/dev/web/data/hidari-kikino-eren/index.html
+++ b/dev/web/data/hidari-kikino-eren/index.html
@@ -21,7 +21,7 @@
 	<meta name = "msapplication-TileImage" content = "https://mrpoco.github.io/myport/dev/web/data/hidari-kikino-eren/images/logo_icon.png">  <!-- windowsピン止めイメージ -->
 	<meta name="msapplication-TileColor" content="#B90000"> <!-- windowsピン止め背景色 -->
 	<link rel="icon" href="/data/hidari-kikino-eren/images/favicon.ico"> <!-- favicon -->
-	<link rel="stylesheet" type="text/css" href="/css/hidari-kikino-eren/index.css"> 
+	<link rel="stylesheet" type="text/css" href="/public/hidari-kikino-eren/index.css"> 
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/yakuhanjp@3.3.1/dist/css/yakuhanjp.min.css">
 </head>
 <body>
@@ -308,6 +308,6 @@
 	</div>
 	<div class="p-modalBg js-modalBg"></div>
 	<script type="text/javascript" src="../../lib/jquery-3.4.1.min.js"></script>
-	<script type="text/javascript" src="../../src/js/hidari-kikino-eren/index.js"></script>
+	<script type="text/javascript" src="/public/hidari-kikino-eren/bundle.js"></script>
 </body>
 </html>
