--- a/dev/static/data/index.html
+++ b/dev/static/data/index.html
@@ -6,8 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>My Portfolio</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans+JP:400,700" rel="stylesheet">
-	<link rel="stylesheet" href="../asset/css/top/index.css">
-	<!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
+	<link rel="stylesheet" href="../public/css/top/index.css">
 </head>
 <body>
 	<header class="p-header">
@@ -34,11 +33,11 @@
 			<h2 class="p-sectionTitle">Works</h2>
 			<ul class="p-section__worksList">
 				<li>
-					<a href=""><img src="/data/images/eren.jpg" alt=""></a>
+					<a href=""><img src="./images/eren.jpg" alt=""></a>
 					<p class="p-section__worksText">LP写経 / HTML / CSS(Sass) / JavaScript</p>
 				</li>
 				<li>
-					<a href=""><img src="/data/images/kadel.jpg" alt=""></a>
+					<a href=""><img src="./images/kadel.jpg" alt=""></a>
 					<p class="p-section__worksText">LP写経 / HTML / CSS(Sass) / jQuery</p>
 				</li>
 			</ul>
