--- a/dev/static/data/kadel/index.html
+++ b/dev/static/data/kadel/index.html
@@ -13,7 +13,7 @@
   <meta property="og:description" content="大阪府市の建築事務所KADeLの新しいコンセプトハウス「瓦の家」をご紹介します。">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@twitter_account">
-  <link rel="stylesheet" href="../../asset/css/kadel/index.css">
+  <link rel="stylesheet" href="../public/css/kadel/index.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
