--- a/dev/static/data/index.html
+++ b/dev/static/data/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>My Portfolio</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans+JP:400,700" rel="stylesheet">
-	<link rel="stylesheet" href="../public/css/top/index.css">
+	<link rel="stylesheet" href="../public/top/index.css">
 </head>
 <body>
 	<header class="p-header">
