--- a/dev/static/data/index.html
+++ b/dev/static/data/index.html
@@ -33,11 +33,11 @@
 			<h2 class="p-sectionTitle">Works</h2>
 			<ul class="p-section__worksList">
 				<li>
-					<a href=""><img src="./images/eren.jpg" alt=""></a>
+					<a href="./hidari-kikino-eren/"><img src="./images/eren.jpg" alt=""></a>
 					<p class="p-section__worksText">LP写経 / HTML / CSS(Sass) / JavaScript</p>
 				</li>
 				<li>
-					<a href=""><img src="./images/kadel.jpg" alt=""></a>
+					<a href="./kadel/"><img src="./images/kadel.jpg" alt=""></a>
 					<p class="p-section__worksText">LP写経 / HTML / CSS(Sass) / jQuery</p>
 				</li>
 			</ul>
