--- a/dev/static/data/index.html
+++ b/dev/static/data/index.html
@@ -43,8 +43,8 @@
 			</ul>
 		</section>
 		<section class="p-section" id="skills">
-			<h2 class="p-sectionTitle">Skills</h2>
-			<p class="p-section__skillsText"> HTML / CSS(Sass)・設計 / jQuery / JavaScript / PHP / git / レスポンシブ化</p>
+			<h2 class="p-sectionTitle">Skills・Tools</h2>
+			<p class="p-section__skillsText"> HTML / CSS(Sass)・設計 / jQuery / JavaScript / PHP / レスポンシブ化 / Vue(学習中) / git / gulp / webpack</p>
 		</section>
 	</main>
 	<footer class="p-footer">
