--- a/dev/static/data/index.html
+++ b/dev/static/data/index.html
@@ -22,7 +22,7 @@
 			<h2 class="p-sectionTitle">Profile</h2>
 			<dl class="p-section__profileList">
 				<dt>氏名</dt>
-				<dd>川口拓真</dd>
+				<dd>T.K</dd>
 				<dt>所属</dt>
 				<dd>株式会社 アウトソーシングデザイナー</dd>
 				<dt>自己紹介</dt>
@@ -50,7 +50,7 @@
 	<footer class="p-footer">
 		<div class="p-footer__content">
 			<p>MY PORTFOLIO</p>
-			<small>Copyright &copy; 2020 Takuma Kawaguchi. All Rights Reserved.</small>
+			<small>Copyright &copy; 2020 T.K. All Rights Reserved.</small>
 		</div>
 	</footer>
 </body>
